Estou implementando o controle de acceso no sistema. Tenho que consertar a remocao de permissoes.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
   <ui:composition template="./template.xhtml">
       <ui:define name="content_page">
-      Bem vindo ao SGA 2.0                   
+          <h:outputText value="Bem vindo ao SGA 2.0"/>
     </ui:define>
   </ui:composition> 
 
